# ticktick-mcp

./: .env.example  .gitgitnore  .gitignore  README.md  pyproject.toml
src/: main.py  ticktick_mcp.py
src/ticktick_mcp/: __init__.py  client.py  config.py  helpers.py  mcp_instance.py
src/ticktick_mcp/tools/: __init__.py  conversion_tools.py  filter_tools.py  generic_tools.py  task_tools.py
